samples/_failures_safe/1761393957_128b5d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_934043dc.c: In function ‘main’:
./samples/SAFE/__tmp_934043dc.c:170:26: error: expected ‘)’ at end of input
  170 |     if (len > 0 && buffer
      |        ~                 ^
      |                          )
./samples/SAFE/__tmp_934043dc.c:170:5: error: expected declaration or statement at end of input
  170 |     if (len > 0 && buffer
      |     ^~
